--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 
 <body>
-<h1>Moonlord</h1> 
+<h1>Moonlord</h1>
+<p>Terraria is one of the best games ever(but that's just my opinion)which is why I made my name Moonlord!</p>
 </body>
 
 </html>
