--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 <h1>Moonlord</h1>
-<p>Terraria is one of the best games ever(but that's just my opinion)which is why I made my name Moonlord!</p>
+<p>Terraria is one of the best games ever(but that's just my opinion)which is why I made my name Moonlord! I recommend buying Terraria!</p>
 </body>
 
 </html>
