--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ color:green;
 <body>
 <h1>Moonlord</h1>
 <p>Terraria is one of the best games ever(but that's just my opinion)which is why I made my name Moonlord! I recommend buying Terraria!</p>
+<p>Another awesome game is Fez. Fez is a puzzle game that changed my view on platform games forever!</p>
 </body>
 
 </html>
