--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@ color:green;
   
 
 <body>
-<h1>Moonlord</h1>
+<h1>Video Game Recommendations by TheMoonlord</h1>
 <p>Terraria is one of the best games ever(but that's just my opinion)which is why I made my name Moonlord! I recommend buying Terraria!</p>
 <p>Another awesome game is Fez. Fez is a puzzle game that changed my view on platform games forever!</p>
+<p>Also, Just Shapes and Beats is an awesome bullet-heck game where you dodge the pink things! It sounds boring but it's not. Plus, it has
+  the BEST soundtrack!</p>
 </body>
 
 </html>
