--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <head>
 <title>The Moonlord</title>
 <style>
+  body{
+  font-family:"Trebuchet MS";
+  }
 h1{
 color:green;
-  font-size:60px;
+font-size:60px;
 }
 </style>
 </head>
