--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@ font-size:60px;
   
 
 <body>
-<h1>Video Game Recommendations by TheMoonlord</h1>
+<h1>Video Game Recommendations </h1>
+  <h3>by The Moonlord</h3>
 <p>Terraria is one of the best games ever(but that's just my opinion)which is why I made my name Moonlord! I recommend buying Terraria!</p>
-  <p>Another awesome game is <a href="https://fez.fandom.com/wiki/FEZ_Wiki">Fez</a>. Fez is a puzzle game that changed my view on platforms forever!</p>
+  <p>Another game is <a href="https://fez.fandom.com/wiki/FEZ_Wiki">Fez</a>. Fez is a puzzle game that changed my view on platforms forever!</p>
 <p>Also, Just Shapes and Beats is an awesome bullet-heck game where you dodge the pink things! It sounds boring but it's not. Plus, it has
   the BEST soundtrack!</p>
   <p>Some of the swords from Terraria</p>
