--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ I recommend buying Terraria!</p>
   <button onclick="alert('Whoops, didn\'t mean to delete all your files!')">Collect 100,000 V-bucks</button>
   <button onclick="alert('Downloading notascam.exe...')">Collect 1,000,000,000,000,000 V-bucks</button>
   <button onclick="alert('Yee.')">Huh</button>
+  <button onclick="alert('Press OK to download malware.')">Stuff</button>
 </body>
 </html>
 
