--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ I recommend buying Terraria!</p>
   <button onclick="alert('Whoops, didn\'t mean to delete all your files!')">Collect 100,000 V-bucks</button>
   <button onclick="alert('Downloading notascam.exe...')">Collect 1,000,000,000,000,000 V-bucks</button>
   <button onclick="alert('Yee.')">Huh</button>
-  <button onclick="alert('Press OK, press X, log out, lock the profile, switch profiles, close the page, shut down, restart, open another thing, press the power off button on your keyboard, turn off the computer, leave this site alone for too long, or anything else to download malware.')">Stuff</button>
+  <button onclick="prompt('What\'s your\'e favorite video game?')">A Survey</button>
 </body>
 </html>
 
