--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ I recommend buying Terraria!</p>
   <button onclick="alert('JK!')">Collect 100,000 V-bucks</button>
   <button onclick="alert('Still JK!')">Collect 1,000,000,000,000,000 V-bucks</button>
   <button onclick="alert('Yee.')">Huh</button>
-  <button onclick="prompt('What\'s you\'re favorite video game?')">A Survey</button>
+  <button onclick="prompt('What\'s your favorite video game?')">A Survey</button>
 </body>
 </html>
 
