--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>The Moonlord</title>
+<title>asdf</title>
 <style>
   body{
   font-family:"Comic Sans MS";
@@ -31,6 +31,9 @@ I recommend buying Terraria!</p>
   <button onclick="alert('Still JK!')">wat</button>
   <button onclick="alert('Yee.')">Huh</button>
   <button onclick="prompt('What\'s your favorite video game?')">A Survey</button>
+  <script>   
+    
+  </script>
 </body>
 </html>
 
