--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@ I recommend buying Terraria!</p>
   <button onclick="askQuestion()">A Survey</button>
   <script>   
    function askQuestion() {
-      prompt('What\'s your favorite video game?')
+      game = prompt('What\'s your favorite video game?');
+     alert(game + "? You like " + game + "?");
    }
   </script>
 </body>
