Modified text and survey.

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ margin-top:40px;
 <p>Terraria is one of the best games ever (but that's just my opinion) which is why I made my name TheMoonlord! 
 I recommend buying Terraria!</p>
   <p>Another game is <a href="https://fez.fandom.com/wiki/FEZ_Wiki">Fez</a>. 
-    Fez is a puzzle game that changed my view on platforms forever!</p>
-<p>Also, Just Shapes and Beats is an awesome bullet-heck game where you dodge the pink things! 
+    Fez is a puzzle game that changed my view on platformer-puzzles forever!</p>
+<p>Also, Just Shapes and Beats is an awesome bullet-hell game where you dodge the pink things to the time of the music! 
   It sounds boring but it's not. Plus, it has
   the BEST soundtrack!</p>
 <p>Some of the weapons from Terraria</p>
@@ -34,7 +34,7 @@ I recommend buying Terraria!</p>
   <script>   
    function askQuestion() {
       game = prompt('What\'s your favorite video game?');
-     alert(game + "? You like " + game + "?");
+     alert(game + "? OK!");
    }
   </script>
 </body>
